<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="generate"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_generate"
        android:shortcutShortLabel="@string/nav_generate"
        android:shortcutLongLabel="@string/gen_title">
        <intent
            android:action="app.kasa.action.GENERATE"
            android:targetPackage="app.kasa"
            android:targetClass="app.kasa.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/vault_search"
        android:shortcutLongLabel="@string/vault_search">
        <intent
            android:action="app.kasa.action.SEARCH"
            android:targetPackage="app.kasa"
            android:targetClass="app.kasa.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="security"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_shield"
        android:shortcutShortLabel="@string/nav_security"
        android:shortcutLongLabel="@string/sec_title">
        <intent
            android:action="app.kasa.action.SECURITY"
            android:targetPackage="app.kasa"
            android:targetClass="app.kasa.MainActivity" />
    </shortcut>
</shortcuts>
